# NoteDaemon

./: .gitignore  99-netnotes.rules  CMakeLists.txt  README.md  build-admin.sh  build.sh  config  config-example  config.default  config.tcp  diagnose_usb.py  download-install.sh  note-daemon.service  protocol_wire_format.md  refactor.md  setup-netnotes.sh  setup-noteusb.sh  tcp-test-config  test-tcp-tls.sh  uninstall-netnotes.sh
.openclaude/: settings.local.json
docs/: NEXT_STEPS.md  architecture_update_2024-05-10.md  client_daemon_analysis.md  code_review.md  device_acquisition_api.md  device_handler.cpp  device_handler.h  device_ownership_registry.h  imodule.h  main.cpp  monitor_process.md  multi-socket-architecture-analysis.md  session_manager.h
include/: async_logger.h  atomic_sequence.h  bitflag_state.h  bitflag_state_bigint.h  bitflag_state_long.h  capability_registry.h  device_registry.h  device_session.h  device_streaming_thread.h  encryption.h  encryption_protocol.h  event_bytes.h  hid_device_streaming_thread.h  hid_parser.h  input_packet.h  key_code.h  keyboard_capture_lowlatency.h  logger.h  note_file_handle.h  note_file_path.h  note_file_service.h  note_messaging.h  notebytes.h  notebytes_reader.h  notebytes_writer.h  state.h  tls_transport.h  usb_device_descriptor.h  utils.h
include/module_framework/: channel.h  channel_handler.h  config_manager.h  device_ownership_registry.h  encryption_api.h  error.h  error_collector.h  handler_registry.h  imodule.h  module_loader.h  module_registry.h  path_resolver.h  usb_encryption_provider.h  webrtc_manager.h
logs/: log-2026-05-11 20:40.txt
process-monitor/: CMakeLists.txt
process-monitor/src/: process_monitor.cpp
src/: device_registry.cpp  device_session.cpp  keyboard_capture_lowlatency.cpp  main.cpp
src/core/: channel.cpp  note_file_handle.cpp  note_file_path.cpp  note_file_service.cpp  webrtc_manager.cpp
tests/: .gitignore  CMakeLists.txt  README.md  device_claim_release_test.cpp  device_session_test.cpp  diagnose_keyboard_clean.cpp  dro  encryption_test.cpp  error_handling_test.cpp  full_usb_enumeration.cpp  hid_device_streaming_thread_test.cpp  hid_parser_test.cpp  keyboard-device.md  keyboard_capture_lowlatency.cpp  keyboard_capture_lowlatency.h  keyboard_capture_lowlatency_demo.cpp  keyboard_capture_lowlatency_test.cpp  note_file_test.cpp  note_file_test.cpp.back  notebytes_test.cpp  parse_keyboard_log.cpp  test_main.cpp
tests/tests/: keyboard_capture_lowlatency_demo
tools/: note_admin.c
